--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
     "svelte": "^3.37.0",
     "vite": "^2.5.2"
+  },
+  "dependencies": {
+    "svelte-toasts": "^1.1.2"
   }
 }
