--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@mdi/js": "^5.9.55",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
-    "svelte": "^3.37.0",
-    "vite": "^2.5.2"
+    "@mdi/js": "^7.3.67",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "svelte": "^4.2.8",
+    "vite": "^5.0.10"
   },
   "dependencies": {
+    "simple-icons": "^10.2.0",
     "svelte-toasts": "^1.1.2"
   }
 }
